<resources>
    <string name="app_name">ShoeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_screen_title">"Login "</string>
    <string name="welcome_screen_title">Welcome</string>
    <string name="instruction_screen_title">Instruction</string>
    <string name="shoe_listing_screen_title">Shoe List</string>
    <string name="shoe_details_screen_title">New Shoe Details</string>
    <string name="logout_title">Logout</string>
    <string name="shoe_title">Enter Shoe Details</string>
    <string name="shoe_name_title">Shoe Name</string>
    <string name="shoe_name_text">Enter the Show Name</string>
    <string name="company_name_title">Company</string>
    <string name="company_name_hint">Enter Company Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_size_hint">Enter the show size</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="shoe_description_hint">Enter the Shoe Description</string>
    <string name="SaveButton">Save</string>
    <string name="CancelButtom">Cancel</string>
    <string name="no_shoe_list">No shoe Available</string>
    <string name="data_saved">Data Saved Navigate To List Screen</string>
    <string name="no_items_available">No Items Available</string>
    <string name="login_user_name">Enter User Name</string>
    <string name="login_password">Enter Login Password</string>
    <string name="button_login">Login</string>
    <string name="button_new_account">Add New Account</string>
    <string name="tv_login">Login</string>
    <string name="tv_password">Password</string>
    <string name="tv_forget_password">Forget PassWord</string>
    <string name="Forword">Next</string>
    <string name="floating_button">floating</string>
    <string name="welcome_1">"Welcome to Shoe App "</string>

    <string name="welcome_screen_descrpition">Welcomes You in Popular Shoe App.
        With Easy Search And Payment Option. Happy Shopping!!!!</string>
    <string name="instruction4">Happy Shopping!!!!</string>
    <string name="instruction3">LogOut Once Done Through Option Menu at Top Right.</string>
    <string name="instruction2">Added Entries Can be Seen in Shoe List Screen</string>
    <string name="instruction1">Save Shoe Items Once Filled in Shoe Details Screen.</string>
    <string name="instruction0">Navigate Through Next Button Down Right.</string>
    <string name="instruction">Add New Shoe Item Through Floating Button(+).</string>
    <string name="instruction_header">Follow Below Instruction</string>
</resources>