<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.ui.navigationscreens.login.ShoeStoreLoginScreen">
    <!--Used LinearLayout as this view widgets are positioned linear vertically one after the another,aligning of views on the screen   .-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen24"
        android:paddingTop="@dimen/dimen56"
        android:paddingRight="@dimen/dimen24">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen10"
            android:text="@string/tv_login"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen24sp">

        </TextView>
        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8"
            android:layout_marginBottom="@dimen/dimen8">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:hint="@string/login_user_name"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen10"
            android:text="@string/tv_password"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen24sp" />
        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8"
            android:layout_marginBottom="@dimen/dimen8">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen24"
            android:layout_marginBottom="@dimen/dimen24"
            android:padding="@dimen/dimen12"
            android:text="@string/button_login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen24"
            android:layout_marginBottom="@dimen/dimen24"
            android:padding="@dimen/dimen12"
            android:text="@string/button_new_account" />

    </LinearLayout>
</layout>